fix spacing of sidebar when text size increased

--- a/src/client/test.css
+++ b/src/client/test.css
@@ -68,8 +68,9 @@ p{
 	background-color: #484848;
 }
 .nav-sidebar-item{
-	max-height: 100px;
+	/* max-height: 100px; */
 
+	height: auto;
 	padding-top: 20px;
 	padding-left: 20px;
 	padding-bottom: 20px;
@@ -121,7 +122,7 @@ p{
 	flex-wrap: nowrap;
     justify-content: center; 
     align-items: center;
-	height: 50vh;
+	height: 30vh;
 	position: relative;
 }
 
